--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@
   @theme {
    
    --color-primary: oklch(79.5% 0.184 86.047);
-   --color-secondary: oklch(79.5% 0.184 86.047);
+   --color-secondary: "#c5ff4a";
    }
     
    
